--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ tiles-count: 6
 # Social settings
 500px_url:
 facebook_url:
-github_url:
+github_url: https://github.com/Justice-love/Justice-love.github.io
 gitlab_url: https://gitlab.com/u/andrewbanchich
 googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
 instagram_url: https://instagram.com
