--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ stackoverflow:     6885228/justice-love
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
-weibo:             Eddy_XuYi
+weibo:             u/3193958357
 #flickr:            username
 #codepen:           username
 #keybase:           username
