--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ description:        "我们的小窝"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'http://ojt8gkzcy.bkt.clouddn.com/image/jpg/placeholder-big.jpg'
+background:         'https://static.justice-love.com/image/jpg/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             zh_CN
 url:                //justice-love.com
-staticUrl:          //ojt8gkzcy.bkt.clouddn.com
+staticUrl:          //static.justice-love.com
 
 # Jekyll
 permalink:          /:title/
