--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              轶 & 霄
-bio:                '<b style="font-size:18px">读书明理，崇德向善。</b><br/>这里只是大海中的一叶扁舟，但却装载着我们的点滴。'
+bio:                '<b style="font-size:18px">读书明理，崇德向善。</b><br/>这里只是大海中的一叶扁舟，但却装载着我们的点滴生活。'
 description:        "我们的小窝"
 reading_time:       true
 words_per_minute:   200
