--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "我们的小窝"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'https://static.justice-love.com/image/jpg/placeholder-big.jpg'
+background:         'https://static.justice-love.com/image/jpg/bjtp1.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             zh_CN
 url:                //justice-love.com
