--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ background:         'https://static.justice-love.com/image/jpg/bjtp1.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             zh_CN
 url:                //justice-love.com
-staticUrl:          //static.justice-love.com
+staticUrl:          //cdn.justice-love.com
 beian:              湘ICP备2021001965号
 
 # Jekyll
